// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Backend.Resource.Form.Variants component renders correctly 1`] = `
<div
  className="form-section"
>
  <div
    className="form-input"
  >
    <div
      className="form-input"
      style={Object {}}
    >
      <label
        className=""
        htmlFor="upload-19"
      >
        Variant
      </label>
      <react-dropzone
        className="form-dropzone style-square"
        inputProps={
          Object {
            "aria-describedby": "upload-error-20",
            "id": "upload-19",
          }
        }
        multiple={false}
        onDrop={[Function]}
        style={undefined}
      >
        <div
          className="contents-empty"
        >
          <i
            aria-hidden="true"
            className="manicon manicon-cloud-up"
          />
          <div
            className="message"
          >
            <p
              className="primary"
            >
              <span
                className="fake-link"
                role="button"
                tabIndex="0"
              >
                Upload a file
              </span>
               or 
              <br />
              drag and drop here
              <br />
            </p>
          </div>
        </div>
      </react-dropzone>
    </div>
  </div>
  <div
    className="form-input"
  >
    <div
      className="form-input"
      style={Object {}}
    >
      <label
        className=""
        htmlFor="upload-19"
      >
        Variant
      </label>
      <react-dropzone
        className="form-dropzone style-square"
        inputProps={
          Object {
            "aria-describedby": "upload-error-20",
            "id": "upload-19",
          }
        }
        multiple={false}
        onDrop={[Function]}
        style={undefined}
      >
        <div
          className="contents-empty"
        >
          <i
            aria-hidden="true"
            className="manicon manicon-cloud-up"
          />
          <div
            className="message"
          >
            <p
              className="primary"
            >
              <span
                className="fake-link"
                role="button"
                tabIndex="0"
              >
                Upload a file
              </span>
               or 
              <br />
              drag and drop here
              <br />
            </p>
          </div>
        </div>
      </react-dropzone>
    </div>
  </div>
</div>
`;

exports[`Backend.Resource.Form.Variants component when kind is image renders correctly 1`] = `
<div
  className="form-section"
>
  <div
    className="form-input"
  >
    <div
      className="form-input"
      style={Object {}}
    >
      <label
        className=""
        htmlFor="upload-19"
      >
        High Resolution Image
      </label>
      <react-dropzone
        accept="image/*"
        className="form-dropzone style-square"
        inputProps={
          Object {
            "aria-describedby": "upload-error-20",
            "id": "upload-19",
          }
        }
        multiple={false}
        onDrop={[Function]}
        style={undefined}
      >
        <div
          className="contents-empty"
        >
          <i
            aria-hidden="true"
            className="manicon manicon-cloud-up"
          />
          <div
            className="message"
          >
            <p
              className="primary"
            >
              <span
                className="fake-link"
                role="button"
                tabIndex="0"
              >
                Upload a file
              </span>
               or 
              <br />
              drag and drop here
              <br />
            </p>
            <p
              className="secondary"
            >
              gif, jpeg, jpg, png, svg
            </p>
          </div>
        </div>
      </react-dropzone>
    </div>
  </div>
  <div
    className="form-input"
  >
    <div
      className="form-input"
      style={Object {}}
    >
      <label
        className=""
        htmlFor="upload-19"
      >
        Thumbnail Image
      </label>
      <react-dropzone
        accept="image/*"
        className="form-dropzone style-square"
        inputProps={
          Object {
            "aria-describedby": "upload-error-20",
            "id": "upload-19",
          }
        }
        multiple={false}
        onDrop={[Function]}
        style={undefined}
      >
        <div
          className="contents-empty"
        >
          <i
            aria-hidden="true"
            className="manicon manicon-cloud-up"
          />
          <div
            className="message"
          >
            <p
              className="primary"
            >
              <span
                className="fake-link"
                role="button"
                tabIndex="0"
              >
                Upload a file
              </span>
               or 
              <br />
              drag and drop here
              <br />
            </p>
            <p
              className="secondary"
            >
              gif, jpeg, jpg, png, svg
            </p>
          </div>
        </div>
      </react-dropzone>
    </div>
  </div>
</div>
`;

exports[`Backend.Resource.Form.Variants component when kind is pdf renders correctly 1`] = `
<div
  className="form-section"
>
  <div
    className="form-input"
  >
    <div
      className="form-input"
      style={Object {}}
    >
      <label
        className=""
        htmlFor="upload-19"
      >
        Thumbnail Image
      </label>
      <react-dropzone
        accept="image/*"
        className="form-dropzone style-square"
        inputProps={
          Object {
            "aria-describedby": "upload-error-20",
            "id": "upload-19",
          }
        }
        multiple={false}
        onDrop={[Function]}
        style={undefined}
      >
        <div
          className="contents-empty"
        >
          <i
            aria-hidden="true"
            className="manicon manicon-cloud-up"
          />
          <div
            className="message"
          >
            <p
              className="primary"
            >
              <span
                className="fake-link"
                role="button"
                tabIndex="0"
              >
                Upload a file
              </span>
               or 
              <br />
              drag and drop here
              <br />
            </p>
            <p
              className="secondary"
            >
              gif, jpeg, jpg, png, svg
            </p>
          </div>
        </div>
      </react-dropzone>
    </div>
  </div>
</div>
`;
